Add components about, auth, login, registration, creation todo list, home, navbar, todo, todo list, custom validator

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,9 +1,8 @@
-<nav>
-  <div class="nav-wrapper">
-    <a href="/" class="brand-logo center">B!t works</a>
-    <ul id="nav-mobile" class="right hide-on-med-and-down">
-      <li><a href="/about">About</a></li>
-      <li><a href="/auth">Login</a></li>
-    </ul>
-  </div>
-</nav>
+<mat-toolbar color="primary">
+  <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <a href="/" class="xtr-navbar-logo"><span>B!t works</span></a>
+  <span class="example-spacer"></span>
+  <a mat-button href="/auth">Login</a>
+</mat-toolbar>
