--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,1 +1,10 @@
-<h1>Auth tabs</h1>
+<div class="xtr-center">
+  <nav mat-tab-nav-bar class="xtr-center" mat-align-tabs="center">
+    <a mat-tab-link routerLink="/auth/login" routerLinkActive="active-link">Authorization</a>
+    <a mat-tab-link routerLink="/auth/registration" routerLinkActive="active-link">Registration</a>
+  </nav>
+  <div class="xtr-auth-container">
+
+    <router-outlet></router-outlet>
+  </div>
+</div>
