--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,23 +1,23 @@
-<form class="xtr-auth-form">
+<form class="xtr-auth-form" [formGroup]="loginForm">
 
   <mat-form-field appearance="fill">
     <mat-label>Enter your email</mat-label>
-    <input matInput placeholder="pat@example.com" [formControl]="email" required>
-    <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
+    <input matInput placeholder="pat@example.com" formControlName="email" required>
+    <mat-error *ngIf="loginForm.controls['email'].invalid">{{getErrorMessage()}}</mat-error>
   </mat-form-field>
 
   <mat-form-field appearance="fill">
     <mat-label>Enter your password</mat-label>
-    <input matInput [type]="hide ? 'password' : 'text'">
-    <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
-            [attr.aria-pressed]="hide">
-      <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+    <input matInput [type]="showPasswordToggle ? 'password' : 'text'" required formControlName="password">
+    <button mat-icon-button matSuffix (click)="showPasswordToggle = !showPasswordToggle" [attr.aria-label]="'Hide password'"
+            [attr.aria-pressed]="showPasswordToggle">
+      <mat-icon>{{showPasswordToggle ? 'visibility_off' : 'visibility'}}</mat-icon>
     </button>
   </mat-form-field>
   <mat-divider></mat-divider>
   <div class="xtr-auth-form__ctrl">
     <a href="/auth/registration" class="forgot-link">Forgot password</a>
-    <button mat-raised-button color="primary">Login</button>
+    <button mat-raised-button color="primary" [disabled]="loginForm.invalid">Login</button>
   </div>
 
 </form>
