auth forms done. except requests

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -17,7 +17,7 @@
   <mat-divider></mat-divider>
   <div class="xtr-auth-form__ctrl">
     <a href="/auth/registration" class="forgot-link">Forgot password</a>
-    <button mat-raised-button color="primary" [disabled]="loginForm.invalid">Login</button>
+    <button mat-raised-button color="primary" [disabled]="loginForm.invalid" type="submit" (click)="submit()">Login</button>
   </div>
 
 </form>
