--- a/src/app/auth/registration/registration.component.html
+++ b/src/app/auth/registration/registration.component.html
@@ -19,7 +19,7 @@
             [attr.aria-pressed]="showPasswordToggle">
       <mat-icon>{{showPasswordToggle ? 'visibility_off' : 'visibility'}}</mat-icon>
     </button>
-    <mat-error *ngIf="regForm.controls['password'].errors?.['pattern']">Password must be strong</mat-error>
+    <mat-error *ngIf="regForm.get('password')?.errors?.['pattern']">Password must be strong</mat-error>
   </mat-form-field>
 
   <mat-form-field appearance="fill">
@@ -29,13 +29,12 @@
             [attr.aria-pressed]="showPasswordToggle">
       <mat-icon>{{showPasswordToggle ? 'visibility_off' : 'visibility'}}</mat-icon>
     </button>
-    <mat-error *ngIf="regForm.errors?.['NoPasswordMatch']">Passwords do not match</mat-error>
-<!--     TODO не срабатывает после touch, валидатор работает, mat-error не отображается-->
+    <mat-error *ngIf="regForm.get('confirmPassword')?.invalid && regForm.get('confirmPassword')?.touched">Passwords do not match</mat-error>
   </mat-form-field>
 
   <mat-divider></mat-divider>
   <div class="xtr-auth-form__ctrl">
-    <button mat-raised-button color="primary" [disabled]="regForm.invalid">Registration</button>
+    <button mat-raised-button color="primary" [disabled]="regForm.invalid" type="submit" (click)="regFormSubmit()">Registration</button>
   </div>
 
 </form>
