--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -16,7 +16,7 @@
   </mat-form-field>
   <mat-divider></mat-divider>
   <div class="xtr-auth-form__ctrl">
-    <a href="/auth/registration" class="forgot-link">Forgot password</a>
+    <a href="/auth/forgot-password" class="forgot-link">Forgot password</a>
     <button mat-raised-button color="primary" [disabled]="loginForm.invalid" type="submit" (click)="submit()">Login</button>
   </div>
 
