--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,26 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.xtr-snackbar-container {
+  max-width: 70vw !important; // important вообще не использую, добавил только в образовательных целях
+  color: #FFFFFF;
+}
+
+.error-xtr-snack-bar {
+  background-color: #D32F2F;
+
+}
+.info-xtr-snack-bar {
+  background-color: #0288D1;
+}
+.success-xtr-snack-bar {
+  background-color: #2E7D32;
+}
+.warning-xtr-snack-bar {
+  background-color: #ED6C02;
+}
+
+.mat-simple-snackbar-action {
+  color: #FFFFFF;
+}
