--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -16,8 +16,8 @@
   </mat-form-field>
   <mat-divider></mat-divider>
   <div class="xtr-auth-form__ctrl">
-    <a href="/auth/forgot-password" class="forgot-link">Forgot password</a>
-    <button mat-raised-button color="primary" [disabled]="loginForm.invalid" type="submit" (click)="submit()">Login</button>
+    <a routerLink="/auth/forgot-password" class="forgot-link">Forgot password</a>
+    <button mat-raised-button color="primary" [disabled]="loginForm.invalid" type="submit" (click)="loginFormSubmit()">Login</button>
   </div>
 
 </form>
