--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,1 @@
-<h1>This is todo application. For use need <a routerLink="/auth/registration">registration</a></h1>
+<h2>This is todo application. For use it you need to <a routerLink="/auth/login">login</a> or <a routerLink="/auth/registration">registration</a></h2>
