changes in home component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,4 +3,13 @@
 <ng-template #todoActions>
   <app-create-todo-list></app-create-todo-list>
   <app-todo-list></app-todo-list>
+<!--  <button-->
+<!--    mat-fab-->
+<!--    matTooltip="Add new todo list"-->
+<!--    matTooltipPosition="above"-->
+<!--    color="primary"-->
+<!--    aria-label="Add new todo list"-->
+<!--    class="xtr-fab-btn">-->
+<!--    +-->
+<!--  </button>-->
 </ng-template>
