--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -1,1 +1,53 @@
-<p>todo-list works!</p>
+<div class="example-action-buttons">
+  <button mat-button (click)="accordion?.closeAll()">Collapse All</button>
+</div>
+<mat-accordion class="example-headers-align" multi>
+  <mat-expansion-panel>
+    <mat-expansion-panel-header>
+      <mat-panel-title>
+        #1 Todo list title
+      </mat-panel-title>
+      <mat-panel-description>
+        Total tasks: 10 | Opened: 3 | Done: 7
+      </mat-panel-description>
+    </mat-expansion-panel-header>
+    <ng-template matExpansionPanelContent>
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" class="xtr-table-tList">
+
+        <ng-container matColumnDef="position">
+          <th mat-header-cell *matHeaderCellDef>No.</th>
+          <td mat-cell *matCellDef="let i = index"> {{i + 1 }} </td>
+        </ng-container>
+        <ng-container matColumnDef="task">
+          <th mat-header-cell *matHeaderCellDef>Task</th>
+          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        </ng-container>
+
+        <!-- Weight Column -->
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef>Actions</th>
+          <td mat-cell *matCellDef="let element">
+            <button mat-icon-button aria-label="finish task" color="primary">
+              <mat-icon >task_alt</mat-icon>
+            </button>
+            <button mat-icon-button aria-label="delete task" color="warn">
+              <mat-icon >delete</mat-icon>
+            </button>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    </ng-template>
+    <mat-action-row>
+      <a mat-button>https://localhost:4200/tl/asr9isd</a>
+      <button mat-button color="primary">Share</button>
+      <button mat-button color="warn">Delete</button>
+    </mat-action-row>
+
+
+  </mat-expansion-panel>
+
+
+</mat-accordion>
