--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,1 +1,42 @@
-<p>todo works!</p>
+<mat-card *ngIf="!isLoading; else loader">
+  <mat-card-title>{{sharedTodo.title}}</mat-card-title>
+  <mat-card-subtitle>{{ sharedTodo.tasks | taskStateCounter}}</mat-card-subtitle>
+  <mat-card-content>
+    <table mat-table
+           *ngIf="sharedTodo.tasks | objIsEmpty"
+           [dataSource]="sharedTodo.tasks | keyvalue"
+           class="mat-elevation-z8 xtr-table-tList">
+
+      <ng-container matColumnDef="position">
+        <th mat-header-cell *matHeaderCellDef>No.</th>
+        <td mat-cell *matCellDef="let i = index"> {{i + 1}} </td>
+      </ng-container>
+      <ng-container matColumnDef="task">
+        <th mat-header-cell *matHeaderCellDef>Task</th>
+        <td mat-cell *matCellDef="let task" [class.xtr-done-task]="task.value.isDone">{{task.value.title}}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef>Actions</th>
+        <td mat-cell *matCellDef="let task">
+          <button mat-icon-button aria-label="finish task" color="primary" [disabled]="task.value.isDone">
+            <mat-icon>task_alt</mat-icon>
+          </button>
+          <button mat-icon-button aria-label="delete task" color="warn">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  </mat-card-content>
+  <mat-card-actions align="end">
+    <button mat-button color="primary">Save changes</button>
+  </mat-card-actions>
+</mat-card>
+<ng-template #loader>
+  <xtr-loader></xtr-loader>
+</ng-template>
+<pre>{{sharedTodo | json}}</pre>
