--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,3 +1,4 @@
+<button (click)="click()">get</button>
 <mat-card *ngIf="!isLoading; else loader">
   <mat-card-title>{{sharedTodo.title}}</mat-card-title>
   <mat-card-subtitle>{{ sharedTodo.tasks | taskStateCounter}}</mat-card-subtitle>
@@ -16,7 +17,7 @@
         <td mat-cell *matCellDef="let task" [class.xtr-done-task]="task.value.isDone">{{task.value.title}}</td>
       </ng-container>
 
-      <ng-container matColumnDef="actions">
+      <ng-container matColumnDef="actions" *ngIf="isWriteable">
         <th mat-header-cell *matHeaderCellDef>Actions</th>
         <td mat-cell *matCellDef="let task">
           <button mat-icon-button aria-label="finish task" color="primary" [disabled]="task.value.isDone">
@@ -28,11 +29,13 @@
         </td>
       </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <tr mat-header-row
+          *matHeaderRowDef="isWriteable ? displayedColumns : displayedColumns | delColumns:'actions'"></tr>
+      <tr mat-row
+          *matRowDef="let row; columns: isWriteable ? displayedColumns : displayedColumns | delColumns:'actions';"></tr>
     </table>
   </mat-card-content>
-  <mat-card-actions align="end">
+  <mat-card-actions align="end" *ngIf="isWriteable">
     <button mat-button color="primary">Save changes</button>
   </mat-card-actions>
 </mat-card>
