--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -1,4 +1,4 @@
-<form class="xtr-create-container" [formGroup]="createTodoForm" (submit)="createTListHandler()">
+<form class="xtr-create-container" [formGroup]="createTodoForm" (submit)="createTodoHandler()">
   <mat-form-field class="example-form-field" appearance="fill">
     <mat-label>New todo list</mat-label>
     <input matInput type="text" placeholder="Enter some todo list name" formControlName="listName">
@@ -25,15 +25,9 @@
         </mat-panel-description>
       </mat-expansion-panel-header>
       <ng-template matExpansionPanelContent>
-        <form [formGroup]="createTaskForm">
-          <mat-form-field class="example-full-width" appearance="fill">
-            <mat-label>New task</mat-label>
-            <input matInput placeholder="Not forget ..." [formControlName]="todo.key">
-          </mat-form-field>
-          <button mat-icon-button aria-label="Create new task" color="primary" (click)="createTaskHandler(todo.key)">
-            <mat-icon>add_circle</mat-icon>
-          </button>
-        </form>
+        <app-add-task-form [fieldName]="todo.key"
+                           (submitAction)="createTaskHandler($event, todo.key)"
+        ></app-add-task-form>
         <!--  Tasks table start  -->
         <table mat-table
                *ngIf="todo.value.tasks | objIsEmpty"
