--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -7,7 +7,7 @@
     ></app-add-task-form>
     <table mat-table
            *ngIf="sharedTodo.tasks | objIsEmpty"
-           [dataSource]="sharedTodo.tasks | keyvalue"
+           [dataSource]="sharedTodo.tasks | keyvalue: doNotSort"
            class="mat-elevation-z8 xtr-table-tList">
 
       <ng-container matColumnDef="position">
@@ -16,16 +16,21 @@
       </ng-container>
       <ng-container matColumnDef="task">
         <th mat-header-cell *matHeaderCellDef>Task</th>
-        <td mat-cell *matCellDef="let task" [class.xtr-done-task]="task.value.isDone">{{task.value.title}}</td>
+        <td mat-cell *matCellDef="let task" [class.xtr-done-task]="task.value['isDone']">{{task.value.title}}</td>
       </ng-container>
 
       <ng-container matColumnDef="actions" *ngIf="isWriteable">
         <th mat-header-cell *matHeaderCellDef>Actions</th>
         <td mat-cell *matCellDef="let task">
-          <button mat-icon-button aria-label="finish task" color="primary" [disabled]="task.value.isDone">
+          <button mat-icon-button
+                  aria-label="finish task"
+                  color="primary"
+                  [disabled]="task.value['isDone']"
+                  (click)="completeTask(task.key)"
+          >
             <mat-icon>task_alt</mat-icon>
           </button>
-          <button mat-icon-button aria-label="delete task" color="warn">
+          <button mat-icon-button aria-label="delete task" color="warn" (click)="deleteTaskHandler(task.key)">
             <mat-icon>delete</mat-icon>
           </button>
         </td>
@@ -38,10 +43,19 @@
     </table>
   </mat-card-content>
   <mat-card-actions align="end" *ngIf="isWriteable">
-    <button mat-button color="primary">Save changes</button>
+    <button mat-button color="warn"
+            (click)="undoChanges()"
+            [disabled]="localPristine"
+    >Undo changes
+    </button>
+    <button mat-raised-button color="primary"
+            (click)="saveTodo()"
+            [disabled]="localPristine"
+    >Save changes
+    </button>
+    <!--    [disabled]="isLocalPristine"-->
   </mat-card-actions>
 </mat-card>
 <ng-template #loader>
   <xtr-loader></xtr-loader>
 </ng-template>
-<pre>{{sharedTodo | json}}</pre>
