--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -21,7 +21,7 @@
           {{todo.value.title}}
         </mat-panel-title>
         <mat-panel-description>
-          {{ todo.value.tasks ? (todo.value.tasks | taskStateCounter) : 'Total tasks: 0 | Opened: 0 | Done: 0' }}
+          {{ todo.value['tasks'] ? (todo.value['tasks'] | taskStateCounter) : 'Total tasks: 0 | Opened: 0 | Done: 0' }}
         </mat-panel-description>
       </mat-expansion-panel-header>
       <ng-template matExpansionPanelContent>
@@ -30,8 +30,8 @@
         ></app-add-task-form>
         <!--  Tasks table start  -->
         <table mat-table
-               *ngIf="todo.value.tasks | objIsEmpty"
-               [dataSource]="todo.value.tasks | keyvalue"
+               *ngIf="todo.value['tasks'] | objIsEmpty"
+               [dataSource]="todo.value['tasks'] | keyvalue"
                class="mat-elevation-z8 xtr-table-tList">
 
           <ng-container matColumnDef="position">
@@ -40,13 +40,13 @@
           </ng-container>
           <ng-container matColumnDef="task">
             <th mat-header-cell *matHeaderCellDef>Task</th>
-            <td mat-cell *matCellDef="let task" [class.xtr-done-task]="task.value.isDone">{{task.value.title}}</td>
+            <td mat-cell *matCellDef="let task" [class.xtr-done-task]="task.value['isDone']">{{task.value.title}}</td>
           </ng-container>
 
           <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef>Actions</th>
             <td mat-cell *matCellDef="let task">
-              <button mat-icon-button aria-label="finish task" color="primary" [disabled]="task.value.isDone"
+              <button mat-icon-button aria-label="finish task" color="primary" [disabled]="task.value['isDone']"
                       (click)="closeTaskHandler(todo.key, task.key)">
                 <mat-icon>task_alt</mat-icon>
               </button>
@@ -63,34 +63,34 @@
         <!--  Tasks table end  -->
       </ng-template>
       <mat-action-row class="xtr-todo-actions">
-        <div *ngIf="todo.value.isActive" class="xtr-share-actions">
+        <div *ngIf="todo.value['isActive']" class="xtr-share-actions">
           <!--          Start R/RW toggle-->
           <span class="xtr-todo-share-toggle">Read</span>
-          <mat-slide-toggle #shareToggle [checked]="(todo.value.writeable)">
+          <mat-slide-toggle #shareToggle [checked]="(todo.value['writeable'])">
             Read/Write
           </mat-slide-toggle>
           <!--          End R/RW toggle-->
           <button mat-button
                   color="primary"
                   (click)="shareListToggleHandler(
-                    todo.value.isShared,
+                    todo.value['isShared'],
                     todo.key,
                     shareToggle.checked)"
-                  *ngIf="!todo.value.isShared"
+                  *ngIf="!todo.value['isShared']"
           >Create link
           </button>
           <button mat-button
                   color="primary"
-                  *ngIf="todo.value.isShared"
-                  [disabled]="todo.value.writeable == shareToggle.checked"
+                  *ngIf="todo.value['isShared']"
+                  [disabled]="todo.value['writeable'] == shareToggle.checked"
                   (click)="changeShareAccessTypeHandler(todo.key, shareToggle.checked)"
           >Apply changes
           </button>
           <button mat-button
                   color="warn"
-                  *ngIf="todo.value.isShared"
+                  *ngIf="todo.value['isShared']"
                   (click)="shareListToggleHandler(
-                    todo.value.isShared,
+                    todo.value['isShared'],
                     todo.key,
                     shareToggle.checked)"
           >Cancel share
@@ -100,21 +100,21 @@
           >Back
           </button>
         </div>
-        <div *ngIf="!todo.value.isActive">
+        <div *ngIf="!todo.value['isActive']">
           <button mat-icon-button
                   matTooltip="Copy link to clipboard"
                   matTooltipPosition="above"
-                  *ngIf="todo.value.isShared"
-                  [cdkCopyToClipboard]="(todo.value.share_url+todo.key)"
+                  *ngIf="todo.value['isShared']"
+                  [cdkCopyToClipboard]="(todo.value['share_url']+todo.key)"
           >
             <mat-icon>content_copy</mat-icon>
           </button>
-          <span class="xtr-share-link" *ngIf="todo.value.isShared">{{todo.value.share_url + todo.key}}</span>
+          <span class="xtr-share-link" *ngIf="todo.value['isShared']">{{todo.value['share_url'] + todo.key}}</span>
           <button mat-button color="primary" (click)="activeTodoToggle(todo.key)"
-                  *ngIf="!todo.value.isActive">Share
+                  *ngIf="!todo.value['isActive']">Share
           </button>
-          <button mat-button color="warn" (click)="deleteTodoHandler(todo.key, todo.value.isShared)"
-                  *ngIf="!todo.value.isActive">Delete
+          <button mat-button color="warn" (click)="deleteTodoHandler(todo.key, todo.value['isShared'])"
+                  *ngIf="!todo.value['isActive']">Delete
           </button>
         </div>
       </mat-action-row>
